--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  provider: ^6.1.2
+  file_picker: ^8.0.6
+  intl: ^0.19.0
+  dio: ^5.5.0+1
+  url_launcher: ^6.3.0
+  open_file: ^3.3.2
+  path_provider: ^2.1.4
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +66,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
