--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   open_file: ^3.3.2
   path_provider: ^2.1.4
   image_picker: ^1.1.2
+  motion_tab_bar: ^2.0.4
 
 dev_dependencies:
   flutter_test:
