--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
 
   # Yahya and Abdallah unique packages
   table_calendar: ^3.1.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
